# 1c-promprog

./: CMakeLists.txt  README.md  main.cpp  main_preprocessed.cpp
A/: preparing.py
B/: CMakeLists.txt  lib.cpp
C/: main.cpp  test.cpp
PatternsCollection/: bazel-PatternsCollection  bazel-bin  bazel-out  bazel-testlogs
PatternsCollection/AbstractFactory/cpp-source/: BUILD
PatternsCollection/AbstractFactory/cpp-source/factories/: BUILD
PatternsCollection/AbstractFactory/cpp-source/rooms/: BUILD
PatternsCollection/AbstractFactory/cpp-source/serializers/: BUILD  GameSerializer.h  RoomSerializer.h
PatternsCollection/Adapter/cpp-source/: BUILD  main.cpp
PatternsCollection/Adapter/cpp-source/data/: output.json  output_text.json
PatternsCollection/Bridge/cpp-source/: BUILD  BUILD.wrong  CMakeLists.txt  main.cpp
PatternsCollection/Builder/cpp-source/: BUILD
PatternsCollection/ChainResponsibility/cpp-source/: BUILD
PatternsCollection/Command/cpp-source/: BUILD  CMakeLists.txt
PatternsCollection/Composite/cpp-source/: BUILD  main.cpp
PatternsCollection/Composite/cpp-source/ration/: Dish.cpp
PatternsCollection/Decorator/cpp-source/: CMakeLists.txt
PatternsCollection/Facade/cpp-source/: BUILD.tmp  main.cpp
PatternsCollection/FactoryMethod/cpp-source/: BUILD  main.cpp
PatternsCollection/FactoryMethod/cpp-source/routers/: Hub.cpp  Hub.h  Router.h  WifiRouter.cpp  WifiRouter.h
TechProgSimpleLibrary/: CMakeLists.txt  Makefile
data/: data.h  generate_data.py
task4/examples/: 03-main.cpp
task4/tests/01-simple-library/: AddTestCase.cpp  LeapTestCase.cpp  LeapTestCase.h
task4/tests/02-tree/: TreeTestCase.cpp  TreeTestCase.h
task4/tests/03-weather/: WeatherMock.h  WeatherTestCase.cpp  WeatherTestCase.h
